# tracktion_engine

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  BREAKING-CHANGES.md  BREAKING-CHANGES.txt  CHANGELIST.md  CMakeLists.txt  CMakePresets.json  FEATURES.md  LICENSE.md  README.md  ROADMAP.md  annotated.html  audionodes_2tracktion__ClickNode_8h.html  azure-pipelines-cloud.yml  azure-pipelines.yml  benchmarks.html  classARADocument-members.html  classARADocument.html  classAudioModificationWrapper-members.html  classAudioModificationWrapper.html  classAudioSourceWrapper-members.html  classAudioSourceWrapper.html  classMusicalContextWrapper-members.html  classMusicalContextWrapper.html  classNodeReader-members.html  classNodeReader.html  classPerformanceMeasurement-members.html  classPerformanceMeasurement.html  classPlaybackRegionAndSource-members.html  classPlaybackRegionAndSource.html  classPlaybackRegionWrapper-members.html  classPlaybackRegionWrapper.html  classRegionSequenceWrapper-members.html  classRegionSequenceWrapper.html  classScopedPerformanceMeasurement-members.html  classScopedPerformanceMeasurement.html  classengine_1_1AutomationCurve-members.html  (+4338 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md
.github/workflows/: build.yaml  build.yaml_disabled.yaml  build_cmake.yaml  build_ctest.yaml  build_old.yaml  generate_coverage.yaml  generate_coverage.yaml.disabled  juce_compat.yaml  update_docs.yaml
coverage_html/: index-sort-f.html  index-sort-l.html  index.html
coverage_html/coverage_html/: index-sort-f.html  index-sort-l.html  index.html
coverage_html/tracktion_engine/: index-sort-f.html  index-sort-l.html  index.html  tracktion_engine_playback.cpp.func-sort-c.html  tracktion_engine_playback.cpp.func.html  tracktion_engine_playback.cpp.gcov.html
docs/: Engine_2.0_Transition.md  benchmarks.html
doxygen/: Doxyfile  Makefile  README.txt  make.bat  process_source_files.py
doxygen/src/: coding-styles.dox  tracktion_coding-styles.dox
examples/: AudioNodeDev.h  Benchmarks.h  CMakeLists.txt  DemoRunner.h  DistortionEffectDemo.h  EngineInPluginDemo.h  IRPluginDemo.h  IRPlugindemo.h  MidiPlaybackDemo.h  MidiRecordingDemo.h  PatternGeneratorDemo.h  PitchAndTimeDemo.h  PitchShiftDemo.h  PlaybackDemo.h  PluginDemo.h  RecordingDemo.h  RubberBandDemo.h  StepSequencerDemo.h  TestRunner.h  tracktion_ImpulseResponsePlugin.h  tracktion_graph_PerformanceTests.h  tracktion_graph_TestRunner.h
examples/AudioNodeDev/: AudioNode.h  AudioNodeProcessor.h  RackNode.cpp  RackNode.h  TestAudioNodes.h  UtilityNodes.h  tests_AudioNode.cpp  tracktion_engine_RackNode.h  tracktion_engine_tests_RackNode.cpp
examples/AudioNodeDev/docs/: AudioGraphRewrite_part1.md
examples/AudioNodeDev/tracktion_graph/: tracktion_graph_AudioNode.h  tracktion_graph_AudioNodeProcessor.h  tracktion_graph_UtilityNodes.h  tracktion_graph_tests_AudioNode.cpp  tracktion_graph_tests_TestAudioNodes.h  tracktion_graph_tests_Utilities.h
examples/Benchmarks/: Benchmarks.cpp  Benchmarks.h  CMakeLists.txt
examples/CMake/: CMakeLists.txt
examples/CMake/AudioPlugin/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
examples/CMake/ConsoleApp/: CMakeLists.txt
examples/CMake/GuiApp/: CMakeLists.txt  MainComponent.h
examples/DemoRunner/: CMakeLists.txt  DemoRunner.cpp  DemoRunner.h
examples/DemoRunner/demos/: AbletonLinkDemo.h  ClipLauncherDemo.h  ContainerClipDemo.h  DistortionEffectDemo.h  GlobalQuantiseDemo.h  IRPluginDemo.h  MidiPlaybackDemo.h  MidiRecordingDemo.h  PatternGeneratorDemo.h  PitchAndTimeDemo.h  PlaybackDemo.h  PluginDemo.h  RecordingDemo.h  SimplePluginDemo.h  StepSequencerDemo.h  TestDemo.h
examples/DemoRunner/resources/: midi_arp.mid  midi_arp_2.mid
examples/DistortionEffectDemo/: CMakeLists.txt
examples/EngineInPluginDemo/: CMakeLists.txt  EngineInPluginDemo.h
examples/IRPluginDemo/: CMakeLists.txt
examples/MidiPlaybackDemo/: CMakeLists.txt
examples/MidiRecordingDemo/: CMakeLists.txt
examples/PatternGeneratorDemo/: CMakeLists.txt
examples/PitchAndTimeDemo/: CMakeLists.txt
examples/PitchShiftDemo/: CMakeLists.txt
examples/PlaybackDemo/: CMakeLists.txt
examples/PluginDemo/: CMakeLists.txt
examples/RecordingDemo/: CMakeLists.txt
examples/RubberBandDemo/: CMakeLists.txt
examples/StepSequencerDemo/: CMakeLists.txt
examples/TestRunner/: CMakeLists.txt  TestRunner.cpp  TestRunner.h  pch.h
examples/common/: BinaryData.cpp  BinaryData.h  Components.cpp  Components.h  IRData.cpp  IRData.h  PlaybackDemoAudio.cpp  PlaybackDemoAudio.h  PluginWindow.h  Utilities.h  tracktion_graph_Dev.h
examples/demos/: AbletonLink.h  AbletonLinkDemo.h  ContainerClipDemo.h  DistortionEffectDemo.h  GlobalQuantiseDemo.h  IRPluginDemo.h  MidiRecordingDemo.h  PatternGeneratorDemo.h  PitchAndTimeDemo.h  PlaybackDemo.h  PluginDemo.h  RecordingDemo.h  StepSequencerDemo.h
examples/tracktion_graph_PerformanceTests/: CMakeLists.txt  tracktion_graph_PerformanceTests.cpp
examples/tracktion_graph_TestRunner/: CMakeLists.txt  tracktion_graph_TestRunner.cpp
modules/: CMakeLists.txt
modules/tracktion_core/: tracktion_TestConfig.h  tracktion_core.cpp  tracktion_core.h
my-app/: package.json  postcss.config.js  tailwind.config.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  (+146 more)
tests/: README.md  build  generate_examples  run_tests  utils.cmake
tests/coverage/: CMakeLists.txt  coverage.cpp  coverage.h  coverage.txt  gcovr.cfg  generate_coverage_report
tutorials/: 01 - PlaybackDemo.md  02 - PitchAndTimeDemo.md  03 - StepSequencerDemo.md  04 - DistortionEffectDemo.md  PitchAndTimeDemo.md  PlaybackDemo.md  StepSequencerDemo.md
(+3634 files in other folders)
