add_subdirectory(EngineInPluginDemo)
add_subdirectory(IRPluginDemo)
add_subdirectory(MidiRecordingDemo)
add_subdirectory(PatternGeneratorDemo)
add_subdirectory(PitchAndTimeDemo)
add_subdirectory(PlaybackDemo)
add_subdirectory(PluginDemo)
add_subdirectory(RecordingDemo)
add_subdirectory(StepSequencerDemo)
add_subdirectory(tracktion_graph_PerformanceTests)
add_subdirectory(tracktion_graph_TestRunner)
add_subdirectory(TestRunner)